Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -2940,6 +2940,91 @@ url={http://www.endangeredlanguages.com}
   publisher={Cairn/Softwin}
 }
 
+@article{bedford2008northern,
+  title={Northern Vanuatu as a Pacific crossroads: The archaeology of discovery, interaction, and the emergence of the" ethnographic present"},
+  author={Bedford, Stuart and Spriggs, Matthew},
+vol = 47, 
+number = 1, 
+  journal={Asian Perspectives: Special Issue: Maritime Migration and Colonization in Indo-Pacific prehistory},
+    url ={https://www.jstor.org/stable/42928734},
+  pages={95--120},
+  year={2008},
+  publisher={University of Hawai'i Press}
+}
+
+@article{kislev2006early,
+  title={Early domesticated fig in the Jordan Valley},
+  author={Kislev, Mordechai E and Hartmann, Anat and Bar-Yosef, Ofer},
+  journal={Science},
+  volume={312},
+  number={5778},
+  pages={1372--1374},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{powell2009late,
+  title={Late Pleistocene demography and the appearance of modern human behavior},
+  author={Powell, Adam and Shennan, Stephen and Thomas, Mark G},
+  journal={Science},
+  volume={324},
+  number={5932},
+  pages={1298--1301},
+  year={2009},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{marean2007early,
+  title={Early human use of marine resources and pigment in South Africa during the Middle Pleistocene},
+  author={Marean, Curtis W and Bar-Matthews, Miryam and Bernatchez, Jocelyn and Fisher, Erich and Goldberg, Paul and Herries, Andy IR and Jacobs, Zenobia and Jerardino, Antonieta and Karkanas, Panagiotis and Minichillo, Tom and others},
+  journal={Nature},
+  volume={449},
+  number={7164},
+  pages={905--908},
+  year={2007},
+  publisher={Nature Publishing Group UK London}
+}
+
+@book{oakes2001language,
+  title={Language and national identity: Comparing France and Sweden},
+  author={Oakes, Leigh},
+  volume={13},
+  year={2001},
+  publisher={John Benjamins Publishing}
+}
+
+@article{gietzelt1989indonesianization,
+  title={The Indonesianization of West Papua},
+  author={Gietzelt, Dale},
+  journal={Oceania},
+  volume={59},
+  number={3},
+  pages={201--221},
+  year={1989},
+  publisher={Wiley Online Library}
+}
+
+@misc{invasion_day, 
+author={Marlow, Karina}, 
+year ={2016}, 
+url={https://www.sbs.com.au/nitv/article/australia-day-invasion-day-survival-day-whats-in-a-name/a348kzmlw},
+title={Australia Day, Invasion Day, Survival Day: What's in a name?}, 
+publisher={Australia's National Indigenous Television}, 
+note={Published 21 January 2016,  Retrieved 30 July 2016}
+}
+
+@incollection{encyclo_nationalism,
+    author = "Miscevic, Nenad",
+    title = "Nationalism",
+    editor={Edward N. Zalta},
+    URL={https://plato.stanford.edu/archives/fall2020/entries/nationalism/},
+    edition={(Fall 2020 Edition)},
+    booktitle = "The Stanford Encyclopedia of Philosophy",
+    publisher = "Metaphysics Research Lab, Stanford University",
+    year = "2020",
+}
+
+
 @article{lipson_harvad_ancient_dna_vanuatu_2018,
   title = {Population {{Turnover}} in {{Remote Oceania Shortly}} after {{Initial Settlement}}},
   author = {Lipson, Mark and Skoglund, Pontus and Spriggs, Matthew and Valentin, Frederique and Bedford, Stuart and Shing, Richard and Buckley, Hallie and Phillip, Iarawai and Ward, Graeme K. and Mallick, Swapan and Rohland, Nadin and Broomandkhoshbacht, Nasreen and Cheronet, Olivia and Ferry, Matthew and Harper, Thomas K. and Michel, Megan and Oppenheimer, Jonas and Sirak, Kendra and Stewardson, Kristin and Auckland, Kathryn and Hill, Adrian V.S. and Maitland, Kathryn and Oppenheimer, Stephen J. and Parks, Tom and Robson, Kathryn and Williams, Thomas N. and Kennett, Douglas J. and Mentzer, Alexander J. and Pinhasi, Ron and Reich, David},
