Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -768,6 +768,31 @@
   series = {Sign Language International}
 }
 
+@article{kruschke2021bayesian,
+  title={Bayesian analysis reporting guidelines},
+  author={Kruschke, John K},
+  journal={Nature Human Behaviour},
+  volume={5},
+  number={10},
+  pages={1282--1291},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@book{gelman1995bayesian,
+  title={Bayesian data analysis},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Rubin, Donald B},
+  year={1995},
+  publisher={Chapman and Hall/CRC}
+}
+
+
+@book{gelman2006data,
+  title={Data analysis using regression and multilevel/hierarchical models},
+  author={Gelman, Andrew and Hill, Jennifer},
+  year={2006},
+  publisher={Cambridge university press}
+}
 @book{cablitz_2006_marq,
   title = {Marquesan: {{A Grammar}} of {{Space}}},
   author = {Cablitz, Gabriele H.},
@@ -2563,7 +2588,7 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
 
 @phdthesis{skirgaard2020multilevel,
   title={Multilevel dynamics of language diversity in Oceania},
-  author={Skirg{\AA}rd, Hedvig},
+  author={Skirg{\aa}rd, Hedvig},
   school={Australian National University},
   address={Canberra},
   url={https://openresearch-repository.anu.edu.au/handle/1885/218982},
@@ -2943,8 +2968,8 @@ url={http://www.endangeredlanguages.com}
 @article{bedford2008northern,
   title={Northern Vanuatu as a Pacific crossroads: The archaeology of discovery, interaction, and the emergence of the" ethnographic present"},
   author={Bedford, Stuart and Spriggs, Matthew},
-vol = 47, 
-number = 1, 
+    volume = 47, 
+    number = 1, 
   journal={Asian Perspectives: Special Issue: Maritime Migration and Colonization in Indo-Pacific prehistory},
     url ={https://www.jstor.org/stable/42928734},
   pages={95--120},
