--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,8 +1,6 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Wed Aug 23 15:12:36 2023
-\begin{table}[ht]
-\centering
-\begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}}
+% Wed Aug 23 15:21:55 2023
+\begin{longtable}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & references \\ 
   \midrule
@@ -89,7 +87,6 @@ Aotearoa & Aotearoa & 2.000 & maor1246, maor1246 & Sahlins MD (1958) Social Stra
   Woleai & Woleai & 2.000 & wole1240, wole1240 & Alkire WH (1991) Woleai. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 383-384. Burrows EG, Spiro ME (1953) An Atoll Culture: Ethnography of Ifaluk in the Central Carolines (Human Relations Area Files, New Haven, CT). \\ 
   Ānewetak & Ratak + Rālik & 3.000 & mars1254 & Carucci LM (1991) Marshall Islands. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 191-194. Erdland A (1961) The Marshall Islanders: Life and Customs, Thought and Religion of a South Seas People (R. Neuse, Trans) (Human Relations Area Files, New Haven, CT) (Originally published 1914). Williamson I, Sabath MD (1982) Island Population, Land Area, and Climate: a Case Study of the Marshall Islands. Hum Ecol 10(1):71-84. \\ 
    \bottomrule
-\end{tabular}
 \caption{Table of political complexity values (EA033).} 
 \label{appendix_pol_complex_xtable}
-\end{table}
+\end{longtable}
