Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -882,6 +882,8 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 \singlespacing
 \label{appendix_pol_complex}
 
+\input{appendix_pol_complex_xtable.tex}
+
 \newpage
 \subsection{Table of settlement date per island group based on archaeology}
 \singlespacing
