Updates from Overleaf

--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,6 +1,6 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
 % Wed Aug 23 15:24:11 2023
-\begin{longtable}{p{2cm}p{2cm}p{2cm}p{5cm}p{7cm}}
+\begin{longtable}{p{2cm}p{1.5cm}p{1.5cm}p{3cm}p{7cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & references \\ 
   \midrule
@@ -16,7 +16,7 @@ Aotearoa & Aotearoa & 2.000 & maor1246, maor1246 & Sahlins MD (1958) Social Stra
   Hereheretue & Tuamotu & 2.000 & tuam1242 & Emory KP (1975) Material Culture of the Tuamotu Archipelago (Bernice P Bishop Museum, Honolulu, HI). \\ 
   Kanaky & Kanaky (New Caledonia main island) & 1.000 & ajie1238 & Winslow, Don (1991) Ajie. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 9.; Young MW (1991) Goodenough Island. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 85-88.; Hadfield, E. 1920. Among the Natives of the Loyalty Group., Ray, S. 1917. The People and Language of Lifu, Loyalty Islands. Journ. Roy. Anth. Inst. 47. 239-322.; Dubois M (1984) Gens de Mar$\backslash$'\{e\} ($\backslash$'\{E\}ditions Anthropos, Paris, France). Guiart J (1952) L'Organisation Sociale et Politique Traditionelle $\backslash$`\{a\} Mar$\backslash$'\{e\}. (Institut Franc\{$\backslash$c c\}ais d'Oc$\backslash$'\{e\}anie, Noum$\backslash$'\{e\}a, New Caledonia). \\ 
   Kanaky & Kanaky (New Caledonia main island) & 3.000 & xara1244 & Winslow, Don (1991) Ajie. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 9.; Young MW (1991) Goodenough Island. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 85-88.; Hadfield, E. 1920. Among the Natives of the Loyalty Group., Ray, S. 1917. The People and Language of Lifu, Loyalty Islands. Journ. Roy. Anth. Inst. 47. 239-322.; Dubois M (1984) Gens de Mar$\backslash$'\{e\} ($\backslash$'\{E\}ditions Anthropos, Paris, France). Guiart J (1952) L'Organisation Sociale et Politique Traditionelle $\backslash$`\{a\} Mar$\backslash$'\{e\}. (Institut Franc\{$\backslash$c c\}ais d'Oc$\backslash$'\{e\}anie, Noum$\backslash$'\{e\}a, New Caledonia). \\ 
-  Kanaky & Lifou & 2.000 & dehu1237 & Winslow, Don (1991) Ajie. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 9.; Young MW (1991) Goodenough Island. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 85-88.; Hadfield, E. 1920. Among the Natives of the Loyalty Group., Ray, S. 1917. The People and Language of Lifu, Loyalty Islands. Journ. Roy. Anth. Inst. 47. 239-322.; Dubois M (1984) Gens de Mar$\backslash$'\{e\} ($\backslash$'\{E\}ditions Anthropos, Paris, France). Guiart J (1952) L'Organisation Sociale et Politique Traditionelle $\backslash$`\{a\} Mar$\backslash$'\{e\}. (Institut Franc\{$\backslash$c c\}ais d'Oc$\backslash$'\{e\}anie, Noum$\backslash$'\{e\}a, New Caledonia). \\ 
+  Kanaky & Lifou & 2.000 & dehu1237 & Winslow, Don (1991) Ajie. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 9.; Young MW (1991) Goodenough Island. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 85-88.; Hadfield, E. 1920. Among the Natives of the Loyalty Group., Ray, S. 1917. The People and Language of Lifu, Loyalty Islands. Journ. Roy. Anth. Inst. 47. 239-322.; Dubois M (1984) Gens de Maré ($\backslash$'\{E\}ditions Anthropos, Paris, France). Guiart J (1952) L'Organisation Sociale et Politique Traditionelle $\backslash$`\{a\} Mar$\backslash$'\{e\}. (Institut Franc\{$\backslash$c c\}ais d'Oc$\backslash$'\{e\}anie, Noum$\backslash$'\{e\}a, New Caledonia). \\ 
   Kanaky & Nengone & 3.000 & neng1238 & Winslow, Don (1991) Ajie. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 9.; Young MW (1991) Goodenough Island. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 85-88.; Hadfield, E. 1920. Among the Natives of the Loyalty Group., Ray, S. 1917. The People and Language of Lifu, Loyalty Islands. Journ. Roy. Anth. Inst. 47. 239-322.; Dubois M (1984) Gens de Mar$\backslash$'\{e\} ($\backslash$'\{E\}ditions Anthropos, Paris, France). Guiart J (1952) L'Organisation Sociale et Politique Traditionelle $\backslash$`\{a\} Mar$\backslash$'\{e\}. (Institut Franc\{$\backslash$c c\}ais d'Oc$\backslash$'\{e\}anie, Noum$\backslash$'\{e\}a, New Caledonia). \\ 
   Kapingamarangi & Kapingamarangi & 1.000 & kapi1249 & Buck PH (1950) Material Culture of Kapingamarangi (Bernice P. Bishop Museum, Honolulu, HI). Emory KP (1965) Kapingamarangi: Social and Religious Life of a Polynesian Atoll (The Museum, Honolulu, HI). \\ 
   Kosrae & Kosrae & 3.000 & kosr1238 & Athens JS (2007) Prehistoric Population Growth on Kosrae, Eastern Caroline Islands. The Growth and Collapse of Pacific Island Societies, eds Kirch PV, Rallu J (Univ Hawaii Press, Honolulu, HI), pp 257-277. Graves MW (1986) Late Prehistoric Complexity on Lelū: Alternatives to Cordy’s Model. J Polyn Soc 95(4), 479-489. Peoples JG (1991) Kosrae. Encyclopaedia of World Cultures (Vol II: Oceania) (G.K. Hall and Co, New York, NY), pp 128-131. \\ 
