--- a/latex/main.tex
+++ b/latex/main.tex
@@ -416,7 +416,7 @@ Political complexity is, perhaps unsurprisingly, a complex variable. There are a
 
 The research leading to this paper has received funding from the Department of Linguistic and Cultural Evolution, Max Planck Institute for Evolutionary, the School of Culture, History and Language at the Australian National University and from the Australian Research Council through The Wellsprings of Linguistic Diversity Laureate Project (awarded to Professor Nicholas Evans 2014-2018) and the Centre of Excellence for the Dynamics of Language (CoEDL).
 
-I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification and Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania.
+I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification; Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania and finally Oliver Sheehan for helpful discussions regarding coding of the Ethnographic Atlas variables.
 
 I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis \citep{skirgaard2020multilevel} and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
 
@@ -664,7 +664,7 @@ Each island group is associated with the languages spoken there, based on inform
 \label{appendix_def_pol_complex}
 The hypothesis tested in this study relies on a systematic measure of political structure across societies. The most widely used variable in this regard is variable 33 of the Ethnographic Atlas \citep{EA_1971}: ``jurisdictional hierarchy beyond local community'' (EA033). This section gives an overview of how this variable is defined and its distribution in Remote Oceania. 
 
-The Ethnographic Atlas was first published in 1962 and is one of the datasets included in D-PLACE \citep{d_place_all}. EA033 is widely used to represent ``political complexity'' in studies of cultural evolution. This variable has been used to study the relationships between language area, subsistence strategies and political organisation \citep{curriemace2009}; processes of rise and fall of ``political complexity'' in South-east Asia and the Pacific \citep{currie2010rise}; the spread of Christianity in the Pacific \citep{watts_2018}; and coevolution of intensive use of natural resources and political structure \citep{sheehan2018coevolution}.  
+The Ethnographic Atlas was first published in 1962 and is one of the datasets included in D-PLACE \citep{d_place_all}. EA033 is widely used to represent ``political complexity'' in studies of cultural evolution. This variable has been used to study the relationships between language area, subsistence strategies and political organisation \citep{curriemace2009}; processes of rise and fall of ``political complexity'' in South-east Asia and the Pacific \citep{currie2010rise}; the spread of Christianity in the Pacific \citep{watts_2018}; and co-evolution of intensive use of natural resources and political structure \citep{sheehan2018coevolution}.  
 
 In all of the studies referenced above, EA033 is used as a way of quantifying vertical political structure within a given society beyond the local community. In the rest of this study we will be referring to this variable as ``political complexity''. There is a separate variable (EA032) for jurisdictional hierarchy \emph{within} local communities. This variable could not be included due to missing data. 
 
