Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -406,7 +406,7 @@ Political complexity is, perhaps unsurprisingly, a complex variable. There are a
 \newpage
 \singlespacing
 \bibliographystyle{unified_edit_HS_SFM}
-\bibliography{latex/HS_Oceanic, latex/used_pkgs}
+\bibliography{latex/HS_Oceanic, latex/used_pkgs, latex/pol_complex_refs}
 %\singlespacing
 
 
