--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,10 +1,10 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 00:09:07 2023
+% Thu Aug 24 00:13:53 2023
 \begin{longtable}{p{1.8cm}p{1.8cm}p{1.8cm}p{2cm}p{7cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & References \\ 
   \midrule
-Aotearoa & Aotearoa & 2.000 & maor1246 & \citet{sahlins1958social}, \citet{sahlins1958social}, \citet{Buck PH (1952) The Coming of the Maori (Whitcombe and Tombs: Wellington, New Zealand).}, \citet{Buck PH (1952) The Coming of the Maori (Whitcombe and Tombs: Wellington, New Zealand).}, \citet{kirch1984evolution}, \citet{kirch1984evolution}, \citet{van1995maori}, \citet{van1995maori} \\ 
+Aotearoa & Aotearoa & 2.000 & maor1246 & \citet{sahlins1958social}, \citet{sahlins1958social}, \citet{buck1952}, \citet{buck1952}, \citet{kirch1984evolution}, \citet{kirch1984evolution}, \citet{van1995maori}, \citet{van1995maori} \\ 
   Banaba & Tungaru and Tuvalu & 2.000 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
   Bellona + Rennelle & Mo-ava-mo-iki & 2.000 & renn1242 & \citet{birketsmith1956}, \citet{birketsmith1956}, \citet{monberg1991bellona}, \citet{monberg1991bellona} \\ 
   Chuuk & Chuuk & 2.000 & chuu1238 & \citet{goodenough1991}, \citet{goodenough2002under}, \citet{mahony1960taro} \\ 
@@ -46,7 +46,7 @@ Aotearoa & Aotearoa & 2.000 & maor1246 & \citet{sahlins1958social}, \citet{sahli
   Ratak + Rālik & Ratak + Rālik & 3.000 & mars1254 & \citet{carruci1991marshall}, \citet{carruci1991marshall}, \citet{erdland1914}, \citet{erdland1914}, \citet{williamson_1982}, \citet{williamson_1982} \\ 
   Rotuma & Rotuma & 3.000 & rotu1241 & \citet{gardiner1898natives}, \citet{howard1963conservatism}, \citet{howard1991} \\ 
   Rurutu & Rurutu & 2.000 & ruru1237 & \citet{aitken1930ethnology}, \citet{bollt2008excavations}, \citet{edwards2003archaeological} \\ 
-  Rēkohou & Rēkohou & 2.000 & mori1267 & \citet{sahlins1958social}, \citet{Buck PH (1952) The Coming of the Maori (Whitcombe and Tombs: Wellington, New Zealand).}, \citet{kirch1984evolution}, \citet{van1995maori} \\ 
+  Rēkohou & Rēkohou & 2.000 & mori1267 & \citet{sahlins1958social}, \citet{buck1952}, \citet{kirch1984evolution}, \citet{van1995maori} \\ 
   Sorol & Ulithi (greater) & 2.000 & ulit1238 & \citet{lessa1950}, \citet{lessa1966} \\ 
   Sāmoa & Sāmoa & 3.000 & samo1305 & \citet{sahlins1958social}, \citet{buck1930}, \citet{keesing1934}, \citet{watters_1958} \\ 
   Tatakoto + Reao & Tuamotu & 2.000 & tuam1242 & \citet{emory1975material}, \citet{emory1975material} \\ 
