Updates from Overleaf

--- a/latex/pol_complex_refs.bib
+++ b/latex/pol_complex_refs.bib
@@ -29,7 +29,7 @@
 }
 
 @article{beagleholeandbeaglehole1938,
-    author = {Beaglehole, E., and P. Beaglehole.},
+    author = {Beaglehole, E. AND P. Beaglehole.},
     title = {Ethnology of Pukapuka},
     journal = {Bernice Pauahi Bishop Museum Bulletin},
     volume = {110},
@@ -135,7 +135,7 @@
 }
 
 @incollection{burrowsandspiro1953,
-    author = {Burrows, E. G., and M. E. Spiro.},
+    author = {Burrows, E. G. AND  M. E. Spiro.},
     title = {An Atoll Culture: Ethnography of Ifaluk in the Central Carolines},
     booktitle={Human Relations Area Files},
     address = {New Haven},
@@ -195,7 +195,7 @@
 }
 
 @book{josephandmurray1951,
-    author = {Joseph, A., and V. F. Murray},
+    author = {Joseph, A. AND V. F. Murray},
     title = {Chamorros and Carolinians of Saipan: personality tests with an analysis of the Bender Gestalt test by Lauretta Bender},
     publisher = {Harvard University Press},
     address = {Cambridge},
@@ -280,7 +280,7 @@
 @article{macgregor1935,
     author = {Macgregor, G.},
     title = {Notes on the Ethnology of Pukapuka},
-    journal = {{Bernice P Bishop Museum Occasional Papers},
+    journal = {Bernice P Bishop Museum Occasional Papers},
     volume = {11},
     pages = {vi, 1-52},
     year = {1935},
@@ -377,7 +377,7 @@
 }
 
 @article{tetensandkubary1873,
-    author = {Tetens, A., and J. Kubary},
+    author = {Tetens, A. AND  J. Kubary},
     title = {Die Carolineninsel Yap},
     journal = {Journal des Museum Godeffroy},
     address = {Hamburg},
@@ -415,6 +415,7 @@
   author={Athens, J Stephen},
   editor={Kirch PV, Rallu J},
  booktitle={The Growth and Collapse of Pacific Island Societies: Archaeological and Demographic Perspectives.},
+publisher={University of Hawai'i Press},
   pages={257--277},
   year={2007}
 }
@@ -904,7 +905,7 @@ title={Demographic concepts and techniques for the study of small populations},
 @book{metraux_1971,
 year={1971},
 title={Ethnology of Easter Island},
-author{Métraux, A},
+author= {Métraux, A},
 publisher={Bernice P Bishop Muesum},
 address={Honolulu, HI}
 }
